# zffanalyze

./: Cargo.toml  README.md  snapcraft.yaml
.github/workflows/: build_and_test.yml  publish_binaries.yml
snap/: snapcraft.yaml
snap/local/: constants_snap_hostfs_prefix.patch
