[package]
name = "zffanalyze"
authors = ["ph0llux <ph0llux@pm.me>"]
version = "2.0.0-beta.1"
edition = "2021"
rust-version = "1.67.1"
license = "MIT OR Apache-2.0"
description = "A command line utility to analyze zff files."
homepage = "https://zff.dev"
repository = "https://github.com/zff-team/zffanalyze"
keywords = ["forensics", "security", "file-format", "file"]
categories = ["command-line-utilities"]
publish = true

[[bin]]
name = "zffanalyze"
path = "src/bin/main.rs"
test = true
bench = true

[dependencies]
clap = { version = "4.5", features = [ "derive" ] }
zff = { path="../zff", features = ["serde", "log"] }
base64 = "0.22"
hex = "0.4"
time = { version = "0.3.36", features = [ "formatting" ] }
toml = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dialoguer = "0.11"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
ed25519-dalek = { version = "2.0", features = [ "digest" ] }